--- a/Lectures/html/lecture-06.html
+++ b/Lectures/html/lecture-06.html
@@ -52,14 +52,16 @@
             </div>
 
             
-<h2>Introduction</h2>
+<em>By Dr. Kisaru Liyanage</em>
+
+<h2>6.1 Introduction</h2>
 
 <p>Control flow is what distinguishes computers from simple calculators—the ability to make decisions and alter execution based on conditions. This lecture explores conditional operations and branching in ARM assembly, covering comparison instructions, conditional branches, loop implementation, and PC-relative addressing. Understanding these mechanisms is essential for translating high-level control structures (if statements, loops) into assembly code and for comprehending how processors implement dynamic program behavior.</p>
 
 
-<h2>1. Fundamentals of Conditional Execution</h2>
+<h2>6.2 Fundamentals of Conditional Execution</h2>
 
-<h3>1.1 Decision-Making in Computers</h3>
+<h3>6.2.1 Decision-Making in Computers</h3>
 
 <strong>What Makes Computers Powerful</strong>
 
@@ -79,7 +81,7 @@
 <li><strong>Function calls</strong>: Branch with return address saving</li>
 </ul>
 
-<h3>1.2 Program Status Register (PSR)</h3>
+<h3>6.2.2 Program Status Register (PSR)</h3>
 
 <strong>Status Flags</strong>
 
@@ -101,10 +103,10 @@
 
 <strong>Example</strong>
 
-<p>assembly</p>
+<p>``<code>assembly</p>
 <p>CMP R1, R2           ; Compare R1 and R2 (computes R1 - R2)</p>
 <p>; Sets flags based on result</p>
-
+</code>`<code>
 
 <p>If R1 = 5, R2 = 3:</p>
 
@@ -116,16 +118,16 @@
 <li>V = 0 (no overflow)</li>
 </ul>
 
-<h2>2. Comparison Instructions</h2>
+<h2>6.3 Comparison Instructions</h2>
 
-<h3>2.1 Compare (CMP)</h3>
+<h3>6.3.1 Compare (CMP)</h3>
 
 <strong>Syntax</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>CMP Rn, Rm           ; Compare Rn with Rm</p>
 <p>CMP Rn, #imm         ; Compare Rn with immediate</p>
-
+</code>`<code>
 
 <strong>Operation</strong>
 
@@ -138,22 +140,22 @@
 
 <strong>Example Usage</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>MOV R1, #10</p>
 <p>MOV R2, #5</p>
 <p>CMP R1, R2           ; Compares 10 with 5</p>
 <p>; Result: 10 - 5 = 5 (positive, non-zero)</p>
 <p>; Z = 0, N = 0</p>
+</code>`<code>
 
-
-<h3>2.2 Compare Negative (CMN)</h3>
+<h3>6.3.2 Compare Negative (CMN)</h3>
 
 <strong>Syntax</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>CMN Rn, Rm           ; Compare Negative</p>
 <p>CMN Rn, #imm</p>
-
+</code>`<code>
 
 <strong>Operation</strong>
 
@@ -164,14 +166,14 @@
 <li>Useful for checking if sum equals zero</li>
 </ul>
 
-<h3>2.3 Test (TST)</h3>
+<h3>6.3.3 Test (TST)</h3>
 
 <strong>Syntax</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>TST Rn, Rm           ; Test bits</p>
 <p>TST Rn, #imm</p>
-
+</code>`<code>
 
 <strong>Operation</strong>
 
@@ -184,19 +186,19 @@
 
 <strong>Example: Check if bit 5 is set</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>TST R1, #0x20        ; Test bit 5</p>
 <p>BEQ bit_clear        ; Branch if bit was clear (Z=1)</p>
+</code>`<code>
 
-
-<h3>2.4 Test Equivalence (TEQ)</h3>
+<h3>6.3.4 Test Equivalence (TEQ)</h3>
 
 <strong>Syntax</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>TEQ Rn, Rm           ; Test Equivalence</p>
 <p>TEQ Rn, #imm</p>
-
+</code>`<code>
 
 <strong>Operation</strong>
 
@@ -207,15 +209,15 @@
 <li>Used to compare values without affecting C or V flags</li>
 </ul>
 
-<h2>3. Conditional Branch Instructions</h2>
+<h2>6.4 Conditional Branch Instructions</h2>
 
-<h3>3.1 Branch if Equal (BEQ)</h3>
+<h3>6.4.1 Branch if Equal (BEQ)</h3>
 
 <strong>Syntax</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BEQ label            ; Branch if equal (Z=1)</p>
-
+</code>`<code>
 
 <strong>Condition</strong>
 
@@ -226,21 +228,21 @@
 
 <strong>Example</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>CMP R1, R2           ; Compare R1 and R2</p>
 <p>BEQ equal<em>label      ; Jump to equal</em>label if R1 == R2</p>
 <p>; Code if not equal</p>
 <p>equal_label:</p>
 <p>; Code if equal</p>
+</code>`<code>
 
-
-<h3>3.2 Branch if Not Equal (BNE)</h3>
+<h3>6.4.2 Branch if Not Equal (BNE)</h3>
 
 <strong>Syntax</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BNE label            ; Branch if not equal (Z=0)</p>
-
+</code>`<code>
 
 <strong>Condition</strong>
 
@@ -251,89 +253,89 @@
 
 <strong>Example</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>CMP R3, #0</p>
 <p>BNE not_zero         ; Jump if R3 != 0</p>
 <p>; Code if R3 is zero</p>
 <p>not_zero:</p>
 <p>; Code if R3 is non-zero</p>
+</code>`<code>
 
-
-<h3>3.3 Signed Comparison Branches</h3>
+<h3>6.4.3 Signed Comparison Branches</h3>
 
 <strong>Branch if Greater or Equal (BGE)</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BGE label            ; Branch if Rn >= Rm (signed)</p>
 <p>; Condition: N == V</p>
-
+</code>`<code>
 
 <strong>Branch if Less Than (BLT)</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BLT label            ; Branch if Rn < Rm (signed)</p>
 <p>; Condition: N != V</p>
-
+</code>`<code>
 
 <strong>Branch if Greater Than (BGT)</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BGT label            ; Branch if Rn > Rm (signed)</p>
 <p>; Condition: Z==0 AND N==V</p>
-
+</code>`<code>
 
 <strong>Branch if Less or Equal (BLE)</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BLE label            ; Branch if Rn <= Rm (signed)</p>
 <p>; Condition: Z==1 OR N!=V</p>
-
+</code>`<code>
 
 <strong>Example</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>CMP R1, R2</p>
 <p>BGE greater_equal    ; Branch if R1 >= R2 (signed)</p>
 <p>; Code if R1 < R2</p>
 <p>greater_equal:</p>
 <p>; Code if R1 >= R2</p>
+</code>`<code>
 
-
-<h3>3.4 Unsigned Comparison Branches</h3>
+<h3>6.4.4 Unsigned Comparison Branches</h3>
 
 <strong>Branch if Higher or Same (BHS)</strong> (also called BCS - Branch if Carry Set)
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BHS label            ; Branch if Rn >= Rm (unsigned)</p>
 <p>; Condition: C == 1</p>
-
+</code>`<code>
 
 <strong>Branch if Lower (BLO)</strong> (also called BCC - Branch if Carry Clear)
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BLO label            ; Branch if Rn < Rm (unsigned)</p>
 <p>; Condition: C == 0</p>
-
+</code>`<code>
 
 <strong>Branch if Higher (BHI)</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BHI label            ; Branch if Rn > Rm (unsigned)</p>
 <p>; Condition: C==1 AND Z==0</p>
-
+</code>`<code>
 
 <strong>Branch if Lower or Same (BLS)</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BLS label            ; Branch if Rn <= Rm (unsigned)</p>
 <p>; Condition: C==0 OR Z==1</p>
+</code>`<code>
 
-
-<h3>3.5 Signed vs. Unsigned Example</h3>
+<h3>6.4.5 Signed vs. Unsigned Example</h3>
 
 <strong>Key Difference</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>MOV R0, #0xFFFFFFFF  ; R0 = -1 (signed) or 4,294,967,295 (unsigned)</p>
 <p>MOV R1, #1           ; R1 = 1</p>
 <p>CMP R0, R1</p>
@@ -343,7 +345,7 @@
 
 <p>BLT less_signed      ; BRANCH TAKEN</p>
 <p>; Signed: -1 < 1</p>
-
+</code>`<code>
 
 <strong>When to Use Each</strong>
 
@@ -352,13 +354,13 @@
 <li><strong>Unsigned</strong>: Comparing addresses, array indices, sizes, counts</li>
 </ul>
 
-<h3>3.6 Unconditional Branch</h3>
+<h3>6.4.6 Unconditional Branch</h3>
 
 <strong>Syntax</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>B label              ; Branch always</p>
-
+</code>`<code>
 
 <strong>Purpose</strong>
 
@@ -371,16 +373,16 @@
 
 <strong>Example</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>B end                ; Skip this section</p>
 <p>; Code to skip</p>
 <p>end:</p>
 <p>; Continue execution here</p>
+</code>`<code>
 
+<h2>6.5 Labels in Assembly</h2>
 
-<h2>4. Labels in Assembly</h2>
-
-<h3>4.1 Label Definition</h3>
+<h3>6.5.1 Label Definition</h3>
 
 <strong>Purpose</strong>
 
@@ -392,10 +394,10 @@
 
 <strong>Syntax</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>label:               ; Label definition (note colon)</p>
 <p>MOV R0, #1      ; Instruction at this label</p>
-
+</code>`<code>
 
 <strong>Naming Rules</strong>
 
@@ -408,7 +410,7 @@
 
 <strong>Example</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>start:</p>
 <p>MOV R0, #0</p>
 <p>loop:</p>
@@ -416,9 +418,9 @@
 <p>CMP R0, #10</p>
 <p>BLT loop         ; Branch to loop label</p>
 <p>B start          ; Branch to start label</p>
+</code>`<code>
 
-
-<h3>4.2 Label Resolution</h3>
+<h3>6.5.2 Label Resolution</h3>
 
 <strong>Assembly Process</strong>
 
@@ -436,62 +438,65 @@
 <li>Physical addresses determined at load time</li>
 </ul>
 
-<h2>5. Implementing Control Structures</h2>
+<h2>6.6 Implementing Control Structures</h2>
 
-<h3>5.1 If Statement</h3>
+<h3>6.6.1 If Statement</h3>
 
 <strong>C Code</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>if (i == j)</p>
 <p>f = g + h;</p>
 <p>else</p>
 <p>f = g - h;</p>
-
+</code>`<code>
 
 <strong>ARM Assembly (Method 1: Branch on False)</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>CMP R3, R4       ; Compare i (R3) and j (R4)</p>
 <p>BNE else         ; Branch to else if not equal</p>
 <p>ADD R0, R1, R2   ; f = g + h (then clause)</p>
 <p>B exit           ; Skip else clause</p>
+
 <p>else:</p>
 <p>SUB R0, R1, R2   ; f = g - h (else clause)</p>
 <p>exit:</p>
 <p>; Continue...</p>
-
+</code>`<code>
 
 <strong>ARM Assembly (Method 2: Conditional Execution)</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>CMP R3, R4       ; Compare i and j</p>
 <p>ADDEQ R0, R1, R2 ; f = g + h (executed only if equal)</p>
 <p>SUBNE R0, R1, R2 ; f = g - h (executed only if not equal)</p>
+</code>`<code>
 
 
-<h3>5.2 If-Else Ladder</h3>
+<h3>6.6.2 If-Else Ladder</h3>
 
 <strong>C Code</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>if (x < 0)</p>
 <p>result = -1;</p>
 <p>else if (x == 0)</p>
 <p>result = 0;</p>
 <p>else</p>
 <p>result = 1;</p>
-
+</code>`<code>
 
 <strong>ARM Assembly</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>CMP R1, #0       ; Compare x with 0</p>
 <p>BLT negative     ; Branch if x < 0</p>
 <p>BEQ zero         ; Branch if x == 0</p>
 <p>; x > 0</p>
 <p>MOV R0, #1</p>
 <p>B done</p>
+
 <p>negative:</p>
 <p>MOV R0, #-1</p>
 <p>B done</p>
@@ -499,22 +504,22 @@
 <p>MOV R0, #0</p>
 <p>done:</p>
 <p>; Continue...</p>
+</code>`<code>
 
-
-<h3>5.3 While Loop</h3>
+<h3>6.6.3 While Loop</h3>
 
 <strong>C Code</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>while (i < n) {</p>
 <p>sum += i;</p>
 <p>i++;</p>
 <p>}</p>
-
+</code>`<code>
 
 <strong>ARM Assembly</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>loop:</p>
 <p>CMP R1, R2       ; Compare i (R1) with n (R2)</p>
 <p>BGE end_loop     ; Exit if i >= n</p>
@@ -523,22 +528,23 @@
 <p>B loop           ; Branch back to loop start</p>
 <p>end_loop:</p>
 <p>; Continue...</p>
+</code>`<code>
 
-
-<h3>5.4 For Loop</h3>
+<h3>6.6.4 For Loop</h3>
 
 <strong>C Code</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>for (i = 0; i < 10; i++) {</p>
 <p>sum += i;</p>
 <p>}</p>
-
+</code>`<code>
 
 <strong>ARM Assembly</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>MOV R1, #0       ; i = 0 (initialization)</p>
+
 <p>for_loop:</p>
 <p>CMP R1, #10      ; Compare i with 10</p>
 <p>BGE end_for      ; Exit if i >= 10</p>
@@ -547,29 +553,29 @@
 <p>B for_loop       ; Branch back to loop start</p>
 <p>end_for:</p>
 <p>; Continue...</p>
+</code>`<code>
 
-
-<h3>5.5 Do-While Loop</h3>
+<h3>6.6.5 Do-While Loop</h3>
 
 <strong>C Code</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>do {</p>
 <p>sum += i;</p>
 <p>i++;</p>
 <p>} while (i < n);</p>
-
+</code>`<code>
 
 <strong>ARM Assembly</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>do_loop:</p>
 <p>ADD R0, R0, R1   ; sum = sum + i (loop body first)</p>
 <p>ADD R1, R1, #1   ; i++</p>
 <p>CMP R1, R2       ; Compare i with n</p>
 <p>BLT do_loop      ; Branch back if i < n</p>
 <p>; Continue...</p>
-
+</code>`<code>
 
 <strong>Key Difference from While</strong>
 
@@ -578,23 +584,24 @@
 <li>Condition checked at end, not beginning</li>
 </ul>
 
-<h2>6. Array Access in Loops</h2>
+<h2>6.7 Array Access in Loops</h2>
 
-<h3>6.1 Static Array Indexing</h3>
+<h3>6.7.1 Static Array Indexing</h3>
 
 <strong>C Code</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>while (save[i] == k)</p>
 <p>i++;</p>
-
+</code>`<code>
 
 <strong>ARM Assembly</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>; R6 = base address of save array</p>
 <p>; R3 = i (index)</p>
 <p>; R5 = k (comparison value)</p>
+
 <p>loop:</p>
 <p>ADD R12, R6, R3, LSL #2  ; address = base + (i * 4)</p>
 <p>LDR R0, [R12, #0]        ; R0 = save[i]</p>
@@ -604,33 +611,34 @@
 <p>B loop                   ; Continue loop</p>
 <p>exit:</p>
 <p>; Continue...</p>
-
+</code>`<code>
 
 <strong>Dynamic Offset Calculation</strong>
 
 <ul>
-<li><code>R3, LSL #2</code> means R3 × 4 (shift left 2 = multiply by 4)</li>
+<li></code>R3, LSL #2<code> means R3 × 4 (shift left 2 = multiply by 4)</li>
 <li>Words are 4 bytes, so array element i is at base + (i × 4)</li>
 <li>Efficient: shift is faster than multiplication</li>
 </ul>
 
-<h3>6.2 Array Traversal</h3>
+<h3>6.7.2 Array Traversal</h3>
 
 <strong>C Code</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>int sum = 0;</p>
 <p>for (int i = 0; i < 10; i++) {</p>
 <p>sum += arr[i];</p>
 <p>}</p>
-
+</code>`<code>
 
 <strong>ARM Assembly</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>LDR R6, =arr     ; R6 = base address of array</p>
 <p>MOV R0, #0       ; sum = 0</p>
 <p>MOV R1, #0       ; i = 0</p>
+
 <p>loop:</p>
 <p>CMP R1, #10</p>
 <p>BGE done</p>
@@ -641,11 +649,11 @@
 <p>B loop</p>
 <p>done:</p>
 <p>; R0 contains sum</p>
+</code>`<code>
 
+<h2>6.8 PC-Relative Addressing</h2>
 
-<h2>7. PC-Relative Addressing</h2>
-
-<h3>7.1 Branch Instruction Encoding</h3>
+<h3>6.8.1 Branch Instruction Encoding</h3>
 
 <strong>32-Bit Format</strong>
 
@@ -662,7 +670,7 @@
 <li><strong>Offset</strong>: 24-bit signed offset</li>
 </ul>
 
-<h3>7.2 Address Calculation</h3>
+<h3>6.8.2 Address Calculation</h3>
 
 <strong>Problem with Absolute Addressing</strong>
 
@@ -707,7 +715,7 @@
 <p>At execution: PC = 0x1000 + (8 × 4) = 0x1020</p>
 
 
-<h3>7.3 Advantages of PC-Relative</h3>
+<h3>6.8.3 Advantages of PC-Relative</h3>
 
 <strong>Position-Independent Code</strong>
 
@@ -732,9 +740,9 @@
 <li>Absolute addressing wastes bits for nearby targets</li>
 </ul>
 
-<h2>8. Conditional Execution (Alternative to Branching)</h2>
+<h2>6.9 Conditional Execution (Alternative to Branching)</h2>
 
-<h3>8.1 Conditional Instruction Suffixes</h3>
+<h3>6.9.1 Conditional Instruction Suffixes</h3>
 
 <strong>Concept</strong>
 
@@ -755,45 +763,47 @@
 
 <strong>Examples</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>CMP R1, R2</p>
 <p>ADDEQ R0, R3, R4     ; Execute ADD only if R1 == R2</p>
 <p>SUBNE R0, R3, R4     ; Execute SUB only if R1 != R2</p>
 <p>MOVGT R5, #10        ; Execute MOV only if R1 > R2</p>
+</code>`<code>
 
-
-<h3>8.2 Conditional Execution Example</h3>
+<h3>6.9.2 Conditional Execution Example</h3>
 
 <strong>C Code</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>if (a == b)</p>
 <p>max = a;</p>
 <p>else</p>
 <p>max = b;</p>
-
+</code>`<code>
 
 <strong>Method 1: Branching</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>CMP R1, R2       ; Compare a and b</p>
 <p>BNE else</p>
 <p>MOV R0, R1       ; max = a</p>
 <p>B done</p>
+
 <p>else:</p>
 <p>MOV R0, R2       ; max = b</p>
 <p>done:</p>
-
+</code>`<code>
 
 <strong>Method 2: Conditional Execution</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>CMP R1, R2       ; Compare a and b</p>
 <p>MOVEQ R0, R1     ; max = a (if equal)</p>
 <p>MOVNE R0, R2     ; max = b (if not equal)</p>
+</code>`<code>
 
 
-<h3>8.3 Advantages and Limitations</h3>
+<h3>6.9.3 Advantages and Limitations</h3>
 
 <strong>Advantages</strong>
 
@@ -822,9 +832,9 @@
 <li>Performance-critical paths where branches hurt</li>
 </ul>
 
-<h2>9. Basic Blocks</h2>
+<h2>6.10 Basic Blocks</h2>
 
-<h3>9.1 Definition</h3>
+<h3>6.10.1 Definition</h3>
 
 <strong>Basic Block Characteristics</strong>
 
@@ -840,7 +850,7 @@
 
 <strong>Example</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>; Basic Block 1 (entry point)</p>
 <p>MOV R0, #0</p>
 <p>MOV R1, #10</p>
@@ -852,9 +862,9 @@
 <p>ADD R0, R0, #1</p>
 <p>CMP R0, R1</p>
 <p>BLT block2       ; Exit point of block 2</p>
+</code>``
 
-
-<h3>9.2 Importance in Compilation</h3>
+<h3>6.10.2 Importance in Compilation</h3>
 
 <strong>Compiler Optimizations</strong>
 
