--- a/Lectures/html/lecture-07.html
+++ b/Lectures/html/lecture-07.html
@@ -52,14 +52,16 @@
             </div>
 
             
-<h2>Introduction</h2>
+<em>By Dr. Kisaru Liyanage</em>
+
+<h2>7.1 Introduction</h2>
 
 <p>Function calling is a fundamental mechanism that enables modular programming and code reuse. This lecture explores how ARM assembly implements function calls, covering parameter passing, return value handling, the call stack, register preservation conventions, and recursion. Understanding these mechanisms is essential for translating high-level function-based programs into assembly and for comprehending how processors manage execution context across function boundaries.</p>
 
 
-<h2>1. Function Calling Fundamentals</h2>
+<h2>7.2 Function Calling Fundamentals</h2>
 
-<h3>1.1 Function Calling Steps</h3>
+<h3>7.2.1 Function Calling Steps</h3>
 
 <strong>Complete Call Sequence</strong>
 
@@ -81,7 +83,7 @@
 <li>Supports arbitrary call depth</li>
 </ul>
 
-<h3>1.2 Why Use Functions?</h3>
+<h3>7.2.2 Why Use Functions?</h3>
 
 <strong>Benefits</strong>
 
@@ -94,7 +96,7 @@
 
 <strong>Example</strong>
 
-<p>c</p>
+<p>``<code>c</p>
 <p>int add(int a, int b) {</p>
 <p>return a + b;</p>
 <p>}</p>
@@ -102,15 +104,15 @@
 <p>int main() {</p>
 <p>int result = add(5, 3);  // Function call</p>
 <p>}</p>
+</code>`<code>
 
+<h2>7.3 ARM Register Conventions</h2>
 
-<h2>2. ARM Register Conventions</h2>
-
-<h3>2.1 Register Usage Rules</h3>
+<h3>7.3.1 Register Usage Rules</h3>
 
 <strong>Register Classification</strong>
 
-
+</code>`<code>
 <p>R0-R1:   Arguments and return results</p>
 <p>- Caller does NOT expect these preserved</p>
 <p>- Scratch registers</p>
@@ -138,9 +140,10 @@
 <p>R15 (PC): Program Counter</p>
 <p>- Next instruction address</p>
 <p>- Modified to return from function</p>
+</code>`<code>
 
 
-<h3>2.2 Shared Register File</h3>
+<h3>7.3.2 Shared Register File</h3>
 
 <strong>Key Concept</strong>
 
@@ -161,7 +164,7 @@
 
 <strong>Example Scenario</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>main:</p>
 <p>MOV R4, #10      ; main uses R4</p>
 <p>MOV R0, #5       ; Pass argument</p>
@@ -174,16 +177,17 @@
 <p>; Can freely modify R0-R3, R12</p>
 <p>MOV R0, #20      ; Return value</p>
 <p>MOV PC, LR       ; Return</p>
+</code>`<code>
 
+<h2>7.4 Function Call Instructions</h2>
 
-<h2>3. Function Call Instructions</h2>
-
-<h3>3.1 Branch and Link (BL)</h3>
+<h3>7.4.1 Branch and Link (BL)</h3>
 
 <strong>Syntax</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BL function_label    ; Branch and Link</p>
+</code>`<code>
 
 
 <strong>Operation</strong>
@@ -193,16 +197,17 @@
 
 <strong>Example</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>MOV R0, #10      ; Address: 0x1000</p>
 <p>BL fun           ; Address: 0x1004</p>
 <p>ADD R1, R0, #5   ; Address: 0x1008 (return point)</p>
+
 
 <p>fun:</p>
 <p>; LR contains 0x1008 (address after BL)</p>
 <p>; Function code here</p>
 <p>MOV PC, LR       ; Return to 0x1008</p>
-
+</code>`<code>
 
 <strong>Why "Link"?</strong>
 
@@ -212,13 +217,13 @@
 <li>Enables function to return</li>
 </ul>
 
-<h3>3.2 Return from Function</h3>
+<h3>7.4.2 Return from Function</h3>
 
 <strong>Basic Return</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>MOV PC, LR           ; Copy LR to PC</p>
-
+</code>`<code>
 
 <strong>Operation</strong>
 
@@ -230,13 +235,13 @@
 
 <strong>Alternative (older ARM)</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>BX LR                ; Branch and Exchange</p>
+</code>`<code>
 
+<h2>7.5 Parameter Passing</h2>
 
-<h2>4. Parameter Passing</h2>
-
-<h3>4.1 Using R0-R3</h3>
+<h3>7.5.1 Using R0-R3</h3>
 
 <strong>Convention</strong>
 
@@ -248,28 +253,29 @@
 
 <strong>Example: Two Parameters</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>int multiply(int a, int b) {</p>
 <p>return a * b;</p>
 <p>}</p>
 
 <p>int result = multiply(6, 7);</p>
-
+</code>`<code>
 
 <strong>ARM Assembly</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>MOV R0, #6       ; First argument (a)</p>
 <p>MOV R1, #7       ; Second argument (b)</p>
 <p>BL multiply      ; Call function</p>
 <p>; R0 now contains result (42)</p>
 
+
 <p>multiply:</p>
 <p>MUL R0, R0, R1   ; R0 = R0 × R1</p>
 <p>MOV PC, LR       ; Return</p>
+</code>`<code>
 
-
-<h3>4.2 More Than 4 Arguments</h3>
+<h3>7.5.2 More Than 4 Arguments</h3>
 
 <strong>Solution: Use Stack</strong>
 
@@ -281,15 +287,15 @@
 
 <strong>Example: 6 Arguments</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>int sum6(int a, int b, int c, int d, int e, int f) {</p>
 <p>return a + b + c + d + e + f;</p>
 <p>}</p>
-
+</code>`<code>
 
 <strong>ARM Assembly</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>MOV R0, #1       ; arg1</p>
 <p>MOV R1, #2       ; arg2</p>
 <p>MOV R2, #3       ; arg3</p>
@@ -302,6 +308,7 @@
 <p>BL sum6</p>
 <p>ADD SP, SP, #8   ; Clean up stack</p>
 
+
 <p>sum6:</p>
 <p>; R0-R3 have first 4 args</p>
 <p>; Load arg5 and arg6 from stack</p>
@@ -313,11 +320,11 @@
 <p>ADD R0, R0, R4</p>
 <p>ADD R0, R0, R5</p>
 <p>MOV PC, LR</p>
+</code>`<code>
 
+<h2>7.6 Return Values</h2>
 
-<h2>5. Return Values</h2>
-
-<h3>5.1 Primary Return Register (R0)</h3>
+<h3>7.6.1 Primary Return Register (R0)</h3>
 
 <strong>Convention</strong>
 
@@ -329,7 +336,7 @@
 
 <strong>Example</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>add:</p>
 <p>ADD R0, R0, R1   ; R0 = R0 + R1</p>
 <p>MOV PC, LR       ; Return with result in R0</p>
@@ -339,9 +346,9 @@
 <p>MOV R1, #20</p>
 <p>BL add           ; Call function</p>
 <p>; R0 now contains 30</p>
+</code>`<code>
 
-
-<h3>5.2 64-Bit Return Values</h3>
+<h3>7.6.2 64-Bit Return Values</h3>
 
 <strong>Convention</strong>
 
@@ -353,25 +360,26 @@
 
 <strong>Example</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>long long multiply64(int a, int b) {</p>
 <p>return (long long)a * b;</p>
 <p>}</p>
-
+</code>`<code>
 
 <strong>ARM Assembly</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>multiply64:</p>
 <p>SMULL R0, R1, R0, R1  ; Signed multiply long</p>
 <p>; R0 = lower 32 bits</p>
 <p>; R1 = upper 32 bits</p>
 <p>MOV PC, LR</p>
+</code>`<code>
 
 
-<h2>6. The Stack</h2>
+<h2>7.7 The Stack</h2>
 
-<h3>6.1 Stack Structure</h3>
+<h3>7.7.1 Stack Structure</h3>
 
 <strong>Definition</strong>
 
@@ -392,7 +400,7 @@
 
 <strong>Memory Layout</strong>
 
-
+</code>`<code>
 <p>High Address</p>
 <p>┌─────────┐</p>
 <p>│  Stack  │ ← SP points here</p>
@@ -407,9 +415,10 @@
 <p>│  Text   │   (instructions)</p>
 <p>└─────────┘</p>
 <p>Low Address</p>
+</code>`<code>
 
 
-<h3>6.2 Stack Uses</h3>
+<h3>7.7.2 Stack Uses</h3>
 
 <strong>Primary Purposes</strong>
 
@@ -419,15 +428,16 @@
 <p>4. <strong>Extra function arguments</strong> (beyond R0-R3)</p>
 <p>5. <strong>Storing local arrays</strong> that don't fit in registers</p>
 
-<h2>7. Stack Operations</h2>
+<h2>7.8 Stack Operations</h2>
 
-<h3>7.1 Allocating Stack Space (Pushing)</h3>
+<h3>7.8.1 Allocating Stack Space (Pushing)</h3>
 
 <strong>Decrement Stack Pointer</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>SUB SP, SP, #4       ; Allocate 4 bytes (1 register)</p>
 <p>SUB SP, SP, #12      ; Allocate 12 bytes (3 registers)</p>
+</code>`<code>
 
 
 <strong>Why Subtract?</strong>
@@ -438,55 +448,59 @@
 <li>Each 32-bit register needs 4 bytes</li>
 </ul>
 
-<h3>7.2 Storing Values to Stack</h3>
+<h3>7.8.2 Storing Values to Stack</h3>
 
 <strong>Single Register</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>SUB SP, SP, #4       ; Allocate space</p>
 <p>STR R4, [SP, #0]     ; Store R4 at top of stack</p>
+</code>`<code>
 
 
 <strong>Multiple Registers</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>SUB SP, SP, #12      ; Space for 3 registers</p>
 <p>STR R4, [SP, #0]     ; Store R4</p>
 <p>STR R5, [SP, #4]     ; Store R5</p>
 <p>STR R6, [SP, #8]     ; Store R6</p>
-
+</code>`<code>
 
 <strong>Push Multiple (Convenient)</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>PUSH {R4-R6}         ; Allocate and store in one instruction</p>
+</code>`<code>
 
 
-<h3>7.3 Loading Values from Stack</h3>
+<h3>7.8.3 Loading Values from Stack</h3>
 
 <strong>Single Register</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>LDR R4, [SP, #0]     ; Load R4 from stack</p>
 <p>ADD SP, SP, #4       ; Release space</p>
+</code>`<code>
 
 
 <strong>Multiple Registers</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>LDR R4, [SP, #0]     ; Restore R4</p>
 <p>LDR R5, [SP, #4]     ; Restore R5</p>
 <p>LDR R6, [SP, #8]     ; Restore R6</p>
 <p>ADD SP, SP, #12      ; Release space</p>
-
+</code>`<code>
 
 <strong>Pop Multiple</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>POP {R4-R6}          ; Restore and release in one instruction</p>
+</code>`<code>
 
 
-<h3>7.4 Stack Space Lifecycle</h3>
+<h3>7.8.4 Stack Space Lifecycle</h3>
 
 <strong>Pattern</strong>
 
@@ -502,9 +516,9 @@
 <li>SP must be restored before return</li>
 </ul>
 
-<h2>8. Register Preservation</h2>
+<h2>7.9 Register Preservation</h2>
 
-<h3>8.1 Why Preserve R4-R11?</h3>
+<h3>7.9.1 Why Preserve R4-R11?</h3>
 
 <strong>Problem</strong>
 
@@ -524,11 +538,11 @@
 <li>Caller expects R4-R11 unchanged</li>
 </ul>
 
-<h3>8.2 Preservation Pattern</h3>
+<h3>7.9.2 Preservation Pattern</h3>
 
 <strong>Function Template</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>function:</p>
 <p>; Prologue: Save registers</p>
 <p>SUB SP, SP, #12      ; Allocate space</p>
@@ -545,6 +559,7 @@
 <p>LDR R6, [SP, #8]     ; Restore R6</p>
 <p>ADD SP, SP, #12      ; Release space</p>
 <p>MOV PC, LR           ; Return</p>
+</code>`<code>
 
 
 <strong>Optimization</strong>
@@ -555,9 +570,9 @@
 <li>Saves stack space and execution time</li>
 </ul>
 
-<h2>9. Nested Function Calls (Non-Leaf Functions)</h2>
+<h2>7.10 Nested Function Calls (Non-Leaf Functions)</h2>
 
-<h3>9.1 The Problem</h3>
+<h3>7.10.1 The Problem</h3>
 
 <strong>Leaf Function</strong>
 
@@ -578,7 +593,7 @@
 
 <strong>Example Problem</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>main:</p>
 <p>BL funcA         ; LR = address after this BL</p>
 
@@ -589,13 +604,14 @@
 
 <p>funcB:</p>
 <p>MOV PC, LR       ; Correctly returns to funcA</p>
+</code>`<code>
 
 
-<h3>9.2 Solution: Save LR to Stack</h3>
+<h3>7.10.2 Solution: Save LR to Stack</h3>
 
 <strong>Pattern</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>function:</p>
 <p>; Save LR first!</p>
 <p>SUB SP, SP, #4</p>
@@ -608,11 +624,12 @@
 <p>LDR LR, [SP, #0]</p>
 <p>ADD SP, SP, #4</p>
 <p>MOV PC, LR</p>
+</code>`<code>
 
 
 <strong>Complete Example</strong>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>main:</p>
 <p>MOV R0, #5</p>
 <p>BL outer         ; LR = return<em>to</em>main</p>
@@ -634,21 +651,23 @@
 <p>inner:</p>
 <p>MUL R0, R0, R0</p>
 <p>MOV PC, LR       ; Returns to outer</p>
+</code>`<code>
 
 
-<h2>10. Recursion Example: Factorial</h2>
+<h2>7.11 Recursion Example: Factorial</h2>
 
-<h3>10.1 Factorial Function</h3>
+<h3>7.11.1 Factorial Function</h3>
 
 <strong>C Code</strong>
 
-<p>c</p>
+</code>`<code>c
 <p>int fact(int n) {</p>
 <p>if (n <= 1)</p>
 <p>return 1;</p>
 <p>else</p>
 <p>return n * fact(n-1);</p>
 <p>}</p>
+</code>`<code>
 
 
 <strong>Key Points</strong>
@@ -660,9 +679,9 @@
 <li>Stack unwinds as recursion returns</li>
 </ul>
 
-<h3>10.2 ARM Assembly Implementation</h3>
+<h3>7.11.2 ARM Assembly Implementation</h3>
 
-<p>assembly</p>
+</code>`<code>assembly
 <p>fact:</p>
 <p>; Save LR and n</p>
 <p>SUB SP, SP, #8</p>
@@ -687,13 +706,13 @@
 <p>LDR LR, [SP, #4]</p>
 <p>ADD SP, SP, #8</p>
 <p>MOV PC, LR</p>
+</code>`<code>
 
-
-<h3>10.3 Stack Growth During Recursion</h3>
+<h3>7.11.3 Stack Growth During Recursion</h3>
 
 <strong>Call: fact(3)</strong>
 
-
+</code>`<code>
 <p>Initial: SP = 0x1000</p>
 
 <p>fact(3) call:</p>
@@ -711,6 +730,7 @@
 <p>Returns to main with result 6</p>
 
 <p>Final: SP = 0x1000 (restored)</p>
+</code>`<code>
 
 
 <strong>Stack Space Per Call</strong>
@@ -722,11 +742,11 @@
 <li>Deep recursion can overflow stack!</li>
 </ul>
 
-<h2>11. Memory Layout and Stack vs. Heap</h2>
+<h2>7.12 Memory Layout and Stack vs. Heap</h2>
 
-<h3>11.1 Complete Memory Layout</h3>
+<h3>7.12.1 Complete Memory Layout</h3>
 
-
+</code>`<code>
 <p>High Address (0xFFFFFFFF)</p>
 <p>┌──────────────┐</p>
 <p>│   Reserved   │ OS and system</p>
@@ -749,9 +769,10 @@
 <p>│ (Code)       │   Read-only</p>
 <p>└──────────────┘</p>
 <p>Low Address (0x00000000)</p>
+</code>``
 
 
-<h3>11.2 Stack Characteristics</h3>
+<h3>7.12.2 Stack Characteristics</h3>
 
 <strong>Automatic Storage</strong>
 
@@ -785,7 +806,7 @@
 <li>Perfect for temporary data</li>
 </ul>
 
-<h3>11.3 Heap Characteristics</h3>
+<h3>7.12.3 Heap Characteristics</h3>
 
 <strong>Dynamic Allocation</strong>
 
