--- a/Lectures/html/lecture-16.html
+++ b/Lectures/html/lecture-16.html
@@ -52,14 +52,16 @@
             </div>
 
             
-<h2>Introduction</h2>
+<em>By Dr. Isuru Nawinne</em>
+
+<h2>16.1 Introduction</h2>
 
 <p>This lecture explores advanced cache design techniques that significantly impact memory system performance. We examine write policies—specifically write-through and write-back strategies—understanding how each handles the critical challenge of maintaining consistency between cache and main memory while balancing performance and complexity. The lecture then progresses to associative cache organizations, from direct-mapped through set-associative to fully-associative designs, revealing how different levels of associativity affect hit rates, access latency, and hardware complexity. Through detailed examples and performance analysis, we discover how modern cache systems make strategic trade-offs between speed, capacity utilization, and implementation cost to achieve optimal memory hierarchy performance.</p>
 
 
-<h2>1. Recap: Write Access in Direct Mapped Cache</h2>
+<h2>16.2 Recap: Write Access in Direct Mapped Cache</h2>
 
-<h3>Write-Through Policy</h3>
+<h3>16.2.1 Write-Through Policy</h3>
 
 <ul>
 <li>When a write access occurs, the cache controller determines if it's a hit or miss through tag comparison</li>
@@ -68,7 +70,7 @@
 <li>On a write miss: Stall the CPU, fetch the missing block from memory, update the cache, and write to memory</li>
 </ul>
 
-<h3>Advantages of Write-Through</h3>
+<h3>16.2.2 Advantages of Write-Through</h3>
 
 <ul>
 <li>Simple to implement - straightforward cache controller design</li>
@@ -76,7 +78,7 @@
 <li>Can overlap writing and tag comparison operations since corrupted data can be safely discarded on a miss</li>
 </ul>
 
-<h3>Disadvantages of Write-Through</h3>
+<h3>16.2.3 Disadvantages of Write-Through</h3>
 
 <ul>
 <li>Generates heavy write traffic to memory</li>
@@ -86,7 +88,7 @@
 <li>CPU must stall for 10-100 clock cycles on each memory write</li>
 </ul>
 
-<h3>Write Buffer Solution</h3>
+<h3>16.2.4 Write Buffer Solution</h3>
 
 <ul>
 <li>A FIFO (First In First Out) queue between cache and memory</li>
@@ -97,9 +99,9 @@
 <li>Limitation: If CPU generates continuous writes, buffer fills up and CPU must still stall</li>
 </ul>
 
-<h2>2. Write-Back Policy</h2>
+<h2>16.3 Write-Back Policy</h2>
 
-<h3>Basic Concept</h3>
+<h3>16.3.1 Basic Concept</h3>
 
 <ul>
 <li>Write to cache only, not to memory immediately</li>
@@ -107,7 +109,7 @@
 <li>Write blocks back to memory only when evicted from cache</li>
 </ul>
 
-<h3>Dirty Bit</h3>
+<h3>16.3.2 Dirty Bit</h3>
 
 <ul>
 <li>An additional bit array in cache structure (alongside valid, tag, data)</li>
@@ -116,7 +118,7 @@
 <li>Indicates that memory copy is not up-to-date</li>
 </ul>
 
-<h3>Write-Back Operations</h3>
+<h3>16.3.3 Write-Back Operations</h3>
 
 <strong>On Write Hit:</strong>
 
@@ -150,7 +152,7 @@
 <li>Update cache entry only (not memory)</li>
 </ul>
 
-<h3>Advantages of Write-Back</h3>
+<h3>16.3.4 Advantages of Write-Back</h3>
 
 <ul>
 <li>Significantly reduces write traffic to memory</li>
@@ -159,7 +161,7 @@
 <li>Write buffer can be used for evicted dirty blocks</li>
 </ul>
 
-<h3>Disadvantages of Write-Back</h3>
+<h3>16.3.5 Disadvantages of Write-Back</h3>
 
 <ul>
 <li>More complex cache controller</li>
@@ -168,7 +170,7 @@
 <li>More logic in controller design</li>
 </ul>
 
-<h3>Write-Back Cache Structure</h3>
+<h3>16.3.6 Write-Back Cache Structure</h3>
 
 <ul>
 <li>Data array</li>
@@ -177,9 +179,9 @@
 <li>Dirty bit array (new addition)</li>
 </ul>
 
-<h2>3. Cache Performance</h2>
+<h2>16.4 Cache Performance</h2>
 
-<h3>Average Access Time Formula</h3>
+<h3>16.4.1 Average Access Time Formula</h3>
 
 
 <p>T_avg = Hit Latency + Miss Rate × Miss Penalty</p>
@@ -194,7 +196,7 @@
 <li>Can be expressed in absolute time (nanoseconds) or clock cycles</li>
 </ul>
 
-<h3>Example Calculation</h3>
+<h3>16.4.2 Example Calculation</h3>
 
 <strong>Given:</strong>
 
@@ -217,7 +219,7 @@
 
 <p>This shows significant improvement from better hit rate.</p>
 
-<h3>Performance Example Problem</h3>
+<h3>16.4.3 Performance Example Problem</h3>
 
 <strong>Given:</strong>
 
@@ -250,15 +252,15 @@
 </ul>
 
 
-<h2>4. Improving Cache Performance</h2>
+<h2>16.5 Improving Cache Performance</h2>
 
-<h3>Three Factors to Improve</h3>
+<h3>16.5.1 Three Factors to Improve</h3>
 
 <p>1. Hit Rate - increase the percentage of hits</p>
 <p>2. Hit Latency - reduce time to determine hits</p>
 <p>3. Miss Penalty - reduce time to fetch missing blocks</p>
 
-<h3>Improving Hit Rate</h3>
+<h3>16.5.2 Improving Hit Rate</h3>
 
 <strong>Method 1: Larger Cache Size</strong>
 
@@ -270,7 +272,7 @@
 <li>Trade-off: More chip area required</li>
 </ul>
 
-<h3>Direct Mapped Cache Limitation</h3>
+<h3>16.5.3 Direct Mapped Cache Limitation</h3>
 
 <ul>
 <li>Multiple memory blocks can map to same cache index</li>
@@ -280,9 +282,9 @@
 </ul>
 
 
-<h2>5. Fully Associative Cache</h2>
+<h2>16.6 Fully Associative Cache</h2>
 
-<h3>Concept</h3>
+<h3>16.6.1 Concept</h3>
 
 <ul>
 <li>Eliminate index field - no fixed mapping</li>
@@ -291,7 +293,7 @@
 <li>Tag is larger since no index bits</li>
 </ul>
 
-<h3>Finding Blocks</h3>
+<h3>16.6.2 Finding Blocks</h3>
 
 <ul>
 <li>Cannot use index to locate block</li>
@@ -301,7 +303,7 @@
 <li>Requires one comparator per cache entry</li>
 </ul>
 
-<h3>Implementation</h3>
+<h3>16.6.3 Implementation</h3>
 
 <ul>
 <li>Need duplicate comparator hardware for each entry</li>
@@ -309,7 +311,7 @@
 <li>As entries increase: more comparators, longer wires, more delays</li>
 </ul>
 
-<h3>Block Placement</h3>
+<h3>16.6.4 Block Placement</h3>
 
 <ul>
 <li>Find first available invalid entry</li>
@@ -317,11 +319,11 @@
 <li>Takes more time than direct mapped</li>
 </ul>
 
-<h3>Block Replacement</h3>
+<h3>16.6.5 Block Replacement</h3>
 
 <p>When all entries are valid, need replacement policy to choose which block to evict.</p>
 
-<h3>Replacement Policies</h3>
+<h3>16.6.6 Replacement Policies</h3>
 
 <p>1. LRU (Least Recently Used) - IDEAL:</p>
 
@@ -345,7 +347,7 @@
 <p>- Lower likelihood of picking LRU block</p>
 <p>- Used in embedded systems for simplicity and low power</p>
 
-<h3>Fully Associative - Advantages</h3>
+<h3>16.6.7 Fully Associative - Advantages</h3>
 
 <ul>
 <li>High utilization of cache space</li>
@@ -353,7 +355,7 @@
 <li>Can choose replacement policy based on needs</li>
 </ul>
 
-<h3>Fully Associative - Disadvantages</h3>
+<h3>16.6.8 Fully Associative - Disadvantages</h3>
 
 <ul>
 <li>Block placement is slow (increases miss penalty)</li>
@@ -363,9 +365,9 @@
 </ul>
 
 
-<h2>6. Set Associative Cache</h2>
+<h2>16.7 Set Associative Cache</h2>
 
-<h3>Concept</h3>
+<h3>16.7.1 Concept</h3>
 
 <ul>
 <li>Combines direct mapped and fully associative approaches</li>
@@ -374,7 +376,7 @@
 <li>Called "N-way set associative" where N is number of ways</li>
 </ul>
 
-<h3>Two-Way Set Associative</h3>
+<h3>16.7.2 Two-Way Set Associative</h3>
 
 <ul>
 <li>Two copies of tag/valid/data arrays</li>
@@ -384,7 +386,7 @@
 <li>Doubles cache capacity compared to direct mapped with same number of sets</li>
 </ul>
 
-<h3>Read Access Process</h3>
+<h3>16.7.3 Read Access Process</h3>
 
 <p>1. Use index to select correct set (via demultiplexer)</p>
 <p>2. Extract both stored tags from the set</p>
@@ -394,7 +396,7 @@
 <p>6. Select correct data block based on which way hit</p>
 <p>7. Use offset to select correct word within block</p>
 
-<h3>Important Notes</h3>
+<h3>16.7.4 Important Notes</h3>
 
 <ul>
 <li>Only one tag can match (each tag identifies unique block)</li>
@@ -404,9 +406,9 @@
 </ul>
 
 
-<h2>7. Associativity Spectrum</h2>
+<h2>16.8 Associativity Spectrum</h2>
 
-<h3>For an 8-Block Cache, Different Organizations</h3>
+<h3>16.8.1 For an 8-Block Cache, Different Organizations</h3>
 
 <p>1-way set associative (Direct Mapped):</p>
 
@@ -442,7 +444,7 @@
 <li>Any block can go anywhere</li>
 </ul>
 
-<h3>Design Considerations</h3>
+<h3>16.8.2 Design Considerations</h3>
 
 <ul>
 <li>Choice depends on: program behavior, CPU architecture, performance goals, power budget</li>
@@ -452,9 +454,9 @@
 </ul>
 
 
-<h2>8. Associativity Comparison Example</h2>
+<h2>16.9 Associativity Comparison Example</h2>
 
-<h3>Setup</h3>
+<h3>16.9.1 Setup</h3>
 
 <ul>
 <li>Four-block cache (4 different blocks)</li>
@@ -471,7 +473,7 @@
 <li>Data unknown (don't care)</li>
 </ul>
 
-<h3>Tag and Index Sizes</h3>
+<h3>16.9.2 Tag and Index Sizes</h3>
 
 <ul>
 <li>Direct Mapped: 4-bit tag, 2-bit index, 2-bit offset</li>
@@ -479,7 +481,7 @@
 <li>Fully Associative: 6-bit tag, 0-bit index, 2-bit offset</li>
 </ul>
 
-<h3>Memory Access Sequence</h3>
+<h3>16.9.3 Memory Access Sequence</h3>
 
 <strong>Access 1: Block Address 0</strong>
 
@@ -540,12 +542,12 @@
 <li>Fully Associative: 2 hits, 3 misses (only cold misses)</li>
 </ul>
 
-<h3>Types of Misses</h3>
+<h3>16.9.4 Types of Misses</h3>
 
 <p>1. Cold Misses: First access to address (unavoidable)</p>
 <p>2. Conflict Misses: Block evicted due to mapping, accessed again later</p>
 
-<h3>Key Observations</h3>
+<h3>16.9.5 Key Observations</h3>
 
 <ul>
 <li>Higher associativity reduces conflict misses</li>
@@ -554,9 +556,9 @@
 </ul>
 
 
-<h2>9. Trade-Offs Summary</h2>
+<h2>16.10 Trade-Offs Summary</h2>
 
-<h3>Hit Rate</h3>
+<h3>16.10.1 Hit Rate</h3>
 
 <ul>
 <li>Increases with higher associativity</li>
@@ -564,7 +566,7 @@
 <li>Fully associative has only cold misses</li>
 </ul>
 
-<h3>Hit Latency</h3>
+<h3>16.10.2 Hit Latency</h3>
 
 <ul>
 <li>Increases with higher associativity</li>
@@ -572,7 +574,7 @@
 <li>Direct mapped is fastest</li>
 </ul>
 
-<h3>Power and Cost</h3>
+<h3>16.10.3 Power and Cost</h3>
 
 <ul>
 <li>Increases with higher associativity</li>
@@ -580,7 +582,7 @@
 <li>More complex control logic</li>
 </ul>
 
-<h3>Design Decision Factors</h3>
+<h3>16.10.4 Design Decision Factors</h3>
 
 <ul>
 <li>Application requirements</li>
