--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <!-- About Lectures on Computer Architecture -->
       <section class="intro">
         <h2>About <em>Lectures on Computer Architecture</em></h2>
+        <p class="lecture-instructor" style="margin-top: -0.5rem; margin-bottom: 1rem;">By Dr. Isuru Nawinne</p>
         <p>
           This lecture series provides a comprehensive guide to computer
           architecture, covering topics from fundamental abstractions to
