--- a/Lectures/html/lecture-02.html
+++ b/Lectures/html/lecture-02.html
@@ -52,15 +52,17 @@
             </div>
 
             
-<h2>Introduction</h2>
+<em>By Dr. Isuru Nawinne</em>
+
+<h2>2.1 Introduction</h2>
 
 <p>The evolution of computer technology over the past 50 years has been nothing short of revolutionary. From room-sized scientific calculators to powerful smartphones in our pockets, this transformation has been guided by a prediction made by Intel co-founder Gordon Moore. This lecture examines the technological trends that enabled this revolution, the physical limitations that eventually constrained traditional scaling approaches, and the architectural innovations that emerged in response.</p>
 
 <p>We will trace the exponential growth in transistor density, explore how smaller feature sizes enabled both more complex circuits and faster operation, understand why clock frequencies stopped increasing around 2004, and see how the industry pivoted to multi-core architectures. Finally, we'll examine how computer systems are organized into three layers (hardware, system software, and application software) and follow the complete translation process from high-level code to binary execution.</p>
 
-<h2>1. Moore's Law - Foundation of Computer Technology Evolution</h2>
+<h2>2.2 Moore's Law - Foundation of Computer Technology Evolution</h2>
 
-<h3>1.1 Who Was Gordon Moore?</h3>
+<h3>2.2.1 Who Was Gordon Moore?</h3>
 
 <strong>Background and Influence:</strong>
 
@@ -79,7 +81,7 @@
 <li>Created benchmark for technology expectations</li>
 </ul>
 
-<h3>1.2 Moore's Law Definition</h3>
+<h3>2.2.2 Moore's Law Definition</h3>
 
 <strong>The Prediction:</strong>
 
@@ -105,7 +107,7 @@
 <li>Influenced research priorities and manufacturing investments</li>
 </ul>
 
-<h3>1.3 Impact of Moore's Law</h3>
+<h3>2.2.3 Impact of Moore's Law</h3>
 
 <strong>Computer Evolution Enabled:</strong>
 
@@ -154,9 +156,9 @@
 <li>Created new fields and destroyed old ones</li>
 </ul>
 
-<h2>2. Technology Scaling - Historical Data</h2>
+<h2>2.3 Technology Scaling - Historical Data</h2>
 
-<h3>2.1 Transistor Count Growth (1970-2010)</h3>
+<h3>2.3.1 Transistor Count Growth (1970-2010)</h3>
 
 <strong>Chart Analysis:</strong>
 
@@ -192,7 +194,7 @@
 <li>Set performance expectations for consumers</li>
 </ul>
 
-<h3>2.2 The x86 Architecture</h3>
+<h3>2.3.2 The x86 Architecture</h3>
 
 <strong>Origin and Naming:</strong>
 
@@ -232,7 +234,7 @@
 <li>Balanced innovation with stability</li>
 </ul>
 
-<h3>2.3 Historical Context</h3>
+<h3>2.3.3 Historical Context</h3>
 
 <strong>Early Computing Era (1985-1990):</strong>
 
@@ -262,9 +264,9 @@
 <li>Set expectations for modern computing</li>
 </ul>
 
-<h2>3. Feature Size Scaling - Lithography Improvements</h2>
+<h2>2.4 Feature Size Scaling - Lithography Improvements</h2>
 
-<h3>3.1 What Made Transistor Count Increase Possible?</h3>
+<h3>2.4.1 What Made Transistor Count Increase Possible?</h3>
 
 <strong>The Answer: Smaller Transistors</strong>
 
@@ -288,11 +290,15 @@
 <li><strong>2006:</strong> 65 nanometer</li>
 <li><strong>2008:</strong> 45 nanometer (very famous generation, many developments)</li>
 <li><strong>Continuing:</strong> 32 nm, 22 nm processes</li>
-<li><strong>Current (2021):</strong> 7 nanometer and 5 nanometer in production</li>
-<li><strong>Future Roadmap:</strong> 3 nanometer, 2 nanometer, 1 nanometer under discussion</li>
+<li><strong>2013 Actual:</strong> 22 nm achieved</li>
+<li><strong>2015 Target:</strong> 16 nm achieved</li>
+<li><strong>2019 Target:</strong> 12 nm achieved</li>
+<li><strong>2023 Target:</strong> 7 nm achieved</li>
+<li><strong>2028 Target:</strong> 5 nm exceeded</li>
+<li><strong>Future Roadmap:</strong> 3nm and 2nm are currently in production, future is 1nm and sub-1nm</li>
 </ul>
 
-<h3>3.2 What is "Feature Size"?</h3>
+<h3>2.4.2 What is "Feature Size"?</h3>
 
 <strong>Original Definition:</strong>
 
@@ -332,7 +338,7 @@
 <li>Marketing convenience over physical precision</li>
 </ul>
 
-<h3>3.3 How Tiny Are Transistors?</h3>
+<h3>2.4.3 How Tiny Are Transistors?</h3>
 
 <strong>Mind-Boggling Scale:</strong>
 
@@ -353,7 +359,7 @@
 <li>Remarkable engineering achievement</li>
 </ul>
 
-<h3>3.4 Transistor Structure</h3>
+<h3>2.4.4 Transistor Structure</h3>
 
 <strong>Basic Components:</strong>
 
@@ -381,9 +387,9 @@
 <li>Critical parameter for circuit performance</li>
 </ul>
 
-<h2>4. Technology Roadmaps - ITRS Predictions</h2>
+<h2>2.5 Technology Roadmaps - ITRS Predictions</h2>
 
-<h3>4.1 ITRS Organization</h3>
+<h3>2.5.1 ITRS Organization</h3>
 
 <strong>International Technology Roadmap for Semiconductors:</strong>
 
@@ -415,7 +421,7 @@
 <li>Dissolved in 2015 due to paradigm shift</li>
 </ul>
 
-<h3>4.2 Original Roadmap (2001)</h3>
+<h3>2.5.2 Original Roadmap (2001)</h3>
 
 <strong>Optimistic Projections:</strong>
 
@@ -437,7 +443,7 @@
 <li>Economic sustainability of smaller features</li>
 </ul>
 
-<h3>4.3 Revised Roadmap (2013)</h3>
+<h3>2.5.3 Revised Roadmap (2013)</h3>
 
 <strong>Adjusted Expectations:</strong>
 
@@ -460,7 +466,7 @@
 <li>Need for alternative approaches emerging</li>
 </ul>
 
-<h3>4.4 Final Roadmap (2015)</h3>
+<h3>2.5.4 Final Roadmap (2015)</h3>
 
 <strong>Dramatic Shift in Direction:</strong>
 
@@ -483,7 +489,7 @@
 <li>End of traditional Moore's Law scaling</li>
 </ul>
 
-<h3>4.5 Why the Change? - 3D Technology</h3>
+<h3>2.5.5 Why the Change? - 3D Technology</h3>
 
 <strong>Major Paradigm Shift (2013-2015):</strong>
 
@@ -523,7 +529,7 @@
 <li>Thermal management solutions</li>
 </ul>
 
-<h3>4.6 Dissolution of ITRS (2015)</h3>
+<h3>2.5.6 Dissolution of ITRS (2015)</h3>
 
 <strong>Reasons for Dissolution:</strong>
 
@@ -555,9 +561,9 @@
 <li>Higher costs per transistor (economic Moore's Law ending)</li>
 </ul>
 
-<h2>5. Why Smaller Transistors Improve Performance</h2>
+<h2>2.6 Why Smaller Transistors Improve Performance</h2>
 
-<h3>5.1 Reason 1: More Complex Circuits</h3>
+<h3>2.6.1 Reason 1: More Complex Circuits</h3>
 
 <strong>Increased Transistor Budget:</strong>
 
@@ -595,7 +601,7 @@
 <li>Hardware accelerators for specific tasks</li>
 </ul>
 
-<h3>5.2 Reason 2: Faster Switching</h3>
+<h3>2.6.2 Reason 2: Faster Switching</h3>
 
 <strong>Electrical Advantages of Smaller Size:</strong>
 
@@ -645,9 +651,9 @@
 <li>Improved frequency response</li>
 </ul>
 
-<h2>6. Clock Rate Trends - The Power Wall</h2>
+<h2>2.7 Clock Rate Trends - The Power Wall</h2>
 
-<h3>6.1 Clock Rate Increases (1982-2004)</h3>
+<h3>2.7.1 Clock Rate Increases (1982-2004)</h3>
 
 <strong>Exponential Growth Era:</strong>
 
@@ -674,7 +680,7 @@
 <li>Consumer expectation of continuous frequency increases</li>
 </ul>
 
-<h3>6.2 The Turning Point (2004-2007)</h3>
+<h3>2.7.2 The Turning Point (2004-2007)</h3>
 
 <strong>Sudden Deceleration:</strong>
 
@@ -705,9 +711,9 @@
 <li>End of "free" performance scaling</li>
 </ul>
 
-<h3>6.3 The Power Wall Problem</h3>
+<h3>2.7.3 The Power Wall Problem</h3>
 
-<strong>Power Consumption Growth Crisis:</strong>
+<em></em>Power Consumption Growth Crisis:
 
 <p>As clock rates increased, power consumption grew unsustainably:</p>
 
@@ -783,9 +789,9 @@
 <li>Not scalable to mass market</li>
 </ul>
 
-<h3>6.4 Dynamic Power Equation</h3>
+<h3>2.7.4 Dynamic Power Equation</h3>
 
-<strong>The Physics of Power Consumption:</strong>
+<em></em>The Physics of Power Consumption:
 
 <p>Dynamic power consumption follows this relationship:</p>
 
@@ -846,9 +852,9 @@
 <li>Leakage current increases at lower voltages</li>
 </ul>
 
-<h3>6.5 Overclocking Phenomenon</h3>
+<h3>2.7.5 Overclocking Phenomenon</h3>
 
-<strong>Marketing and User Community Response:</strong>
+<em></em>Marketing and User Community Response:
 
 <p>Emerged prominently around early 2000s during the MHz wars:</p>
 
@@ -902,9 +908,9 @@
 <li>Many processors destroyed but market remained</li>
 </ul>
 
-<h2>7. Shift to Multi-Core Processors</h2>
+<h2>2.8 Shift to Multi-Core Processors</h2>
 
-<h3>7.1 The Challenge</h3>
+<h3>2.8.1 The Challenge</h3>
 
 <strong>The Industry Dilemma:</strong>
 
@@ -934,9 +940,9 @@
 <li>How to maintain Moore's Law performance benefits?</li>
 </ul>
 
-<h3>7.2 Solution: Multiple Processor Cores</h3>
+<h3>2.8.2 Solution: Multiple Processor Cores</h3>
 
-<strong>Paradigm Shift (2004-2008):</strong>
+<em></em>Paradigm Shift (2004-2008):
 
 <p>Industry pivoted from single-core to multi-core architectures:</p>
 
@@ -997,7 +1003,7 @@
 <li><strong>Thermal Management:</strong> Distribute heat across die</li>
 </ul>
 
-<h3>7.3 The Plan</h3>
+<h3>2.8.3 The Plan</h3>
 
 <strong>Initial Industry Vision:</strong>
 
@@ -1041,7 +1047,7 @@
 <li>Growth much slower than initial projections</li>
 </ul>
 
-<h3>7.4 Why Multi-Core Growth Slowed</h3>
+<h3>2.8.4 Why Multi-Core Growth Slowed</h3>
 
 <strong>The Fundamental Problem: Parallel Programming Difficulty</strong>
 
@@ -1169,7 +1175,7 @@
 <li><strong>Unpredictable Results:</strong> Race conditions cause incorrect output</li>
 </ul>
 
-<h3>7.5 Instruction-Level Parallelism vs Multi-Core Parallelism</h3>
+<h3>2.8.5 Instruction-Level Parallelism vs Multi-Core Parallelism</h3>
 
 <strong>Instruction-Level Parallelism (ILP):</strong>
 
@@ -1237,7 +1243,7 @@
 <p>| Applicability | All code  | Limited patterns |</p>
 <p>| Overhead      | Hidden    | Must manage      |</p>
 
-<h3>7.6 Impact on Software Development</h3>
+<h3>2.8.6 Impact on Software Development</h3>
 
 <strong>For Regular Programmers:</strong>
 
@@ -1290,9 +1296,9 @@
 <li>Specialized training for HPC (high-performance computing)</li>
 </ul>
 
-<h2>8. Computer System Organization - Three Layers</h2>
+<h2>2.9 Computer System Organization - Three Layers</h2>
 
-<h3>8.1 Hardware Layer (Bottom)</h3>
+<h3>2.9.1 Hardware Layer (Bottom)</h3>
 
 <strong>Physical Components:</strong>
 
@@ -1376,9 +1382,9 @@
 <li>Provide computational substrate</li>
 </ul>
 
-<h3>8.2 System Software Layer (Middle)</h3>
+<h3>2.9.2 System Software Layer (Middle)</h3>
 
-<strong>Tool Chain Components:</strong>
+<em></em>Tool Chain Components:
 
 <strong>Compiler:</strong>
 
@@ -1529,7 +1535,7 @@
 <li>Device I/O without hardware specifics</li>
 </ul>
 
-<h3>8.3 Application Software Layer (Top)</h3>
+<h3>2.9.3 Application Software Layer (Top)</h3>
 
 <strong>User-Level Programs:</strong>
 
@@ -1588,9 +1594,9 @@
 <li>Requires compilation/interpretation to execute</li>
 </ul>
 
-<h2>9. From High-Level Code to Machine Code - The Translation Process</h2>
+<h2>2.10 From High-Level Code to Machine Code - The Translation Process</h2>
 
-<h3>9.1 Example: Swap Function in C</h3>
+<h3>2.10.1 Example: Swap Function in C</h3>
 
 <strong>Source Code:</strong>
 
@@ -1621,7 +1627,7 @@
 <p>2. Copy v[k+1] to v[k]</p>
 <p>3. Copy temporary to v[k+1]</p>
 
-<h3>9.2 After Compilation - MIPS Assembly Code</h3>
+<h3>2.10.2 After Compilation - MIPS Assembly Code</h3>
 
 <strong>Assembly Translation:</strong>
 
@@ -1679,7 +1685,7 @@
 <li>Explicit memory addressing</li>
 </ul>
 
-<h3>9.3 After Assembly - Machine Code</h3>
+<h3>2.10.3 After Assembly - Machine Code</h3>
 
 <strong>Binary Representation:</strong>
 
@@ -1746,9 +1752,9 @@
 <li>CPU fetches and executes instructions sequentially</li>
 </ul>
 
-<h2>10. Program Execution - Inside the CPU</h2>
+<h2>2.11 Program Execution - Inside the CPU</h2>
 
-<h3>10.1 Block Diagram of Computer</h3>
+<h3>2.11.1 Block Diagram of Computer</h3>
 
 <strong>System Components:</strong>
 
@@ -1826,7 +1832,7 @@
 <li>Results displayed or saved</li>
 </ul>
 
-<h3>10.2 Inside the CPU - Two Main Components</h3>
+<h3>2.11.2 Inside the CPU - Two Main Components</h3>
 
 <strong>Datapath:</strong>
 
@@ -1903,7 +1909,7 @@
 <li>Together implement instruction execution</li>
 </ul>
 
-<h3>10.3 Execution Process (Conveyor Belt Analogy)</h3>
+<h3>2.11.3 Execution Process (Conveyor Belt Analogy)</h3>
 
 <strong>Instruction Execution Cycle:</strong>
 
@@ -1967,7 +1973,7 @@
 <li>Pipelining overlaps multiple instructions (discussed in later lectures)</li>
 </ul>
 
-<h3>10.4 Cache Memory</h3>
+<h3>2.11.4 Cache Memory</h3>
 
 <strong>Purpose and Motivation:</strong>
 
@@ -2037,9 +2043,9 @@
 <li>Cache coherency in multi-core</li>
 </ul>
 
-<h2>11. Real CPU Layout - AMD Barcelona Example</h2>
+<h2>2.12 Real CPU Layout - AMD Barcelona Example</h2>
 
-<h3>11.1 Overview</h3>
+<h3>2.12.1 Overview</h3>
 
 <strong>AMD Barcelona Processor:</strong>
 
@@ -2061,7 +2067,7 @@
 <li>Educational value for understanding architecture</li>
 </ul>
 
-<h3>11.2 Four Processor Cores</h3>
+<h3>2.12.2 Four Processor Cores</h3>
 
 <strong>Core Distribution:</strong>
 
@@ -2083,7 +2089,7 @@
 <li><strong>Interconnect Balance:</strong> Equal distances to shared resources</li>
 </ul>
 
-<h3>11.3 Inside Each Core</h3>
+<h3>2.12.3 Inside Each Core</h3>
 
 <strong>Floating-Point Unit (FPU):</strong>
 
@@ -2246,7 +2252,7 @@
 <li>May use different associativity than L1</li>
 </ul>
 
-<h3>11.4 Shared Components</h3>
+<h3>2.12.4 Shared Components</h3>
 
 <strong>North Bridge (Central Hub):</strong>
 
@@ -2328,7 +2334,7 @@
 <li>NUMA (Non-Uniform Memory Access) support for multi-socket systems</li>
 </ul>
 
-<h3>11.5 Additional Information </h3>
+<h3>2.12.5 Additional Information </h3>
 
 <strong>WikiChip Database:</strong> https://en.wikichip.org
 
@@ -2454,7 +2460,7 @@
 
 <h2>Summary</h2>
 
-<p>This lecture provided a comprehensive examination of computer technology evolution from the 1970s to present day. Moore's Law, predicting transistor count doubling every two years, served as the guiding principle for the semiconductor industry and enabled the transformation of computers from room-sized machines to powerful pocket devices.</p>
+<p>This lecture provides a comprehensive examination of computer technology evolution from the 1970s to present day. Moore's Law, predicting transistor count doubling every two years, serves as the guiding principle for the semiconductor industry and enables the transformation of computers from room-sized machines to powerful pocket devices.</p>
 
 <p>The progression of manufacturing technology steadily reduced feature sizes from 90 nanometers to current 7nm and 5nm processes. Smaller transistors provided two key advantages: more transistors per chip enabling complex functionality, and faster switching speeds enabling higher clock frequencies. Clock rates grew exponentially from 12.5 MHz in 1982 to 3.6 GHz in 2004.</p>
 
